# dexter-platz

./: .gitignore  AGENTS.md  Cargo.toml  README.md
devlog/: 2025-01-01-navigation-controls.md  2025-09-25-rustup.md  2025-09-26-audio-build.md  test-plan.md
src/: lib.rs  main.rs  meshing.rs  voxel.rs
src/world/: mod.rs
