[package]
name = "platz"
version = "0.1.0"
edition = "2021"

[features]
default = ["x11"]
audio = ["bevy/bevy_audio"]
wayland = ["bevy/wayland"]
x11 = ["bevy/x11"]

[dependencies]
bevy = { version = "0.14", default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_scene",
    "bevy_winit",
    "bevy_text",
    "bevy_ui",
    "default_font",
    "png",
    "tonemapping_luts",
] }
